Ram17Compiler/test_programs/lexer/pass/pass10.ram17
interface Test10 {
	public static void main(String[] a) {
		// Traditional for loop
		integer array[] = {10,10,10,10};
		for(integer i = 0; i < array.length; i++){
			array[i] = i;
		}
	}
}
