Ram17Compiler/test_programs/lexer/fail/fail6.ram17
class Fail6 {
public static void main (String[] args){
    char a = 'c';
}
// This will fail because apostrophe is not defined